# www_app/storage/api-docs/api-docs.json
@@ -97,9 +97,10 @@
                                     "password"
                                 ],
                                 "properties": {
-                                    "username": {
+                                    "email": {
                                         "type": "string",
-                                        "example": "user@example.com"
+                                        "format": "email",
+                                        "example": "john.doe@example.com"
                                     },
                                     "password": {
                                         "type": "string",
